# clever-agents

./: .gitignore  LICENSE  README.md  example.md  hello.py  main.py  openai_client.py  pyproject.toml  settings.py
apps/: multimodal_assistant.py
apps/prompt_foo_poc/: main.py  prompt.json  promptfooconfig.yaml  tests.json  tests.yaml
chatbot/: __init__.py  builder.py
document/: context_generator.py  schemas.py  splitter.py  tokenizer.py
language_model/: __init__.py  base.py  openai.py
language_model/prompt/: __init__.py  builder.py
language_model/schemas/: __init__.py  chat_ml.py
prompts/examples/: context_retrieval_examples.yaml
